# LocalShield-VPN

./: .gitignore  README.md  install.ps1  install.sh  package-lock.json  pyproject.toml
src/backend/: dns_guard.py  keygen.py  killswitch.py  main.py  peer_manager.py  stats.py  tunnel.py
src/frontend/src/: App.tsx  index.css
src/frontend/src-tauri/: tauri.conf.json
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/src/: main.rs
src/frontend/src/components/: Dashboard.tsx  PeerList.tsx  Settings.tsx
src/frontend/src/hooks/: useStats.ts  useVPNStatus.ts
